# terminal-ui-lite

./: LICENSE  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: pylint.yml
docs/: api_guide.md  usage.md
terminal_ui_lite/: __init__.py  models.py  terminal_ui_lite.py
